<resources>
    <!--Init Screen elements-->
    <string name="server_ip">http://165.246.165.130:2222</string>
    <string name="app_name">My week</string>
    <string name="sign_up_label"><u>Sign up</u></string>

    <!--API elements-->
    <string-array name="repeat_mode_selection">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <!--Main Activity elements-->
    <string name="arrow_left">Arrow left</string>
    <string name="arrow_right">Arrow right</string>

    <!--Sign In Activity elements-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_a_member">Not a member yet?</string>
    <string name="now">now</string>

    <!--Sign Up Activity elements-->
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_up">Sign up</string>

    <!--New Memo Dialog elements-->
    <string name="speak_hint">Speak now please…</string>
    <string name="cancel">Cancel</string>

    <!--View Event Dialog elements-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>

    <!--Confirm Event Dialog elements-->
    <string name="event_name">Event name:</string>
    <string name="event_time">Event time:</string>
    <string name="event_date">Event date:</string>
    <string name="event_note">Event note:</string>
    <string name="repeat">Repeat:</string>

    <string name="save">Save</string>
    <string name="signing_in">Signing in…</string>
    <string name="sign_in">Sign in</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="previous_week">Previous week</string>
    <string name="next_week">Next week</string>
    <string name="select_week">Select week</string>
    <string name="suggest_time">Suggested time:</string>

    <string name="event_details">Event Details</string>
    <string name="speak_event_details">Speak Event Details</string>
    <string name="signing_up">Signing up…</string>
    <string name="ai_suggest">Suggestion from AI</string>
    <string name="best_time">The best time is</string>

    <string name="SUN">Su</string>
    <string name="MON">Mo</string>
    <string name="TUE">Tu</string>
    <string name="WED">We</string>
    <string name="THU">Th</string>
    <string name="FRI">Fr</string>
    <string name="SAT">Sa</string>
    <string name="add_group_event">Add group event</string>
    <string name="instruction_group_event">NFC-tap group members\' devices to this phone to add them as group members for an event.</string>

    <string name="weekday">%1$d\n%2$s</string>
    <string name="event_length">Event length:</string>
    <string name="minutes">%1$d minutes</string>
    <string name="members">Members: %1$s</string>
    <string name="calculating">AI is calculating now…</string>
    <string name="about">About</string>

    <string name="app_info">Currently, app can detect 9 event categories. \n\nThey are: \n\'trip\', \'hang out\',
        \'sport\', \'game\', \'project\', \'meet\', \'party\', \'study\', and
        \'shop\'. \n\nAll when event category is not found, it is considered as a
        \'default\' cateogy.\n\nServer is written in plain Python, using frameworks Django, Tensorflow,
        Numpy, and PyBrain.\n\nAI is currently running and we will be more than happy if you could
        help us by signing up and starting using our app :)\nThank you\n\n
        Inha University, Incheon, South Korea\n\nCreators:\n\n
        Kobiljon Toshnazarov\nNematjon Narziev
    </string>
</resources>
