<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_selectweek"
        android:icon="@drawable/ic_weekchoice"
        android:onClick="selectWeekClick"
        android:title="@string/select_week"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_prevweek"
        android:icon="@drawable/ic_arrow_left"
        android:onClick="navPrevWeekClick"
        android:title="@string/previous_week"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_nextweek"
        android:icon="@drawable/ic_arrow_right"
        android:onClick="navNextWeekClick"
        android:title="@string/next_week"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_update"
        android:onClick="updateClick"
        android:title="@string/update" />

    <item
        android:id="@+id/action_group_event"
        android:onClick="groupEventClick"
        android:title="@string/add_group_event" />

    <item
        android:id="@+id/settings"
        android:onClick="settingsClick"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:onClick="onLogoutClick"
        android:title="@string/log_out" />

    <item
        android:id="@+id/action_about"
        android:onClick="onAboutClick"
        android:title="@string/about" />
</menu>