<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="#f060"
            android:clickable="true"
            android:text="@string/edit"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="#f060"
            android:clickable="true"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="#f060"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
